# python-serialize

./: .gitignore  README.md  pyproject.toml  python-serialize.code-workspace
executable-code/pickle-importable/: main.py  plus.py
python-objects/foreign-formats/: jsonpickle_demo.py  models.py
tabular-data/csv-demo/: users.csv
tabular-data/parquet-demo/: users.csv
